test/compilable/imports/testimport2c.d
module imports.testimport2c;

void baz() {}
