test/fail_compilation/imports/fail313stdio.d
module imports.fail313stdio;

void writefln(A...)(string fmt, A args) {}
